Improve WbpSourceDatabase creation and use performance