@@ -1,4 +1,4 @@
-package org.jjazz.proswing.walkingbass;
+package org.jjazz.proswing.walkingbass.db;
 
 import org.jjazz.proswing.BassStyle;
 import com.google.common.base.Preconditions;
@@ -11,7 +11,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.IntSummaryStatistics;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -35,10 +34,14 @@ import org.jjazz.harmony.api.TimeSignature;
 import org.jjazz.harmony.spi.ChordTypeDatabase;
 import org.jjazz.midi.api.MidiConst;
 import org.jjazz.midi.api.MidiUtilities;
-import org.jjazz.phrase.api.NoteEvent;
 import org.jjazz.phrase.api.Phrase;
 import org.jjazz.phrase.api.Phrases;
 import org.jjazz.phrase.api.SizedPhrase;
+import org.jjazz.proswing.walkingbass.Score;
+import org.jjazz.proswing.walkingbass.WbpSourceAdaptation;
+import org.jjazz.proswing.walkingbass.WbpsaScorer;
+import org.jjazz.proswing.walkingbass.WbpsaScorerDefault;
+import static org.jjazz.proswing.walkingbass.WalkingBassMusicGenerator.NON_QUANTIZED_WINDOW;
 import org.jjazz.rhythmmusicgeneration.api.SimpleChordSequence;
 import org.jjazz.utilities.api.FloatRange;
 import org.jjazz.utilities.api.IntRange;
@@ -65,7 +68,6 @@ public class WbpSourceDatabase
     /**
      * Beat window for the first note of a WbpSource.
      */
-    public static float FIRST_NOTE_BEAT_WINDOW = 0.15f;
     private static WbpSourceDatabase INSTANCE;
     @StaticResource(relative = true)
     private static final String MIDI_FILE_WALKING_RESOURCE_PATH = "WalkingBassMidiDB.mid";
@@ -76,8 +78,7 @@ public class WbpSourceDatabase
 
     private final Map<String, String> mapSessionIdResource;
     private final ListMultimap<String, WbpSource> mmapSessionIdWbpSources;
-    private final ListMultimap<Integer, WbpSource> mmapSizeWbpSources;
-    private final ListMultimap<BassStyle, WbpSource>[] mmapBassStyleWbpSources;
+    private final ListMultimap<BsRp, WbpSource> mmapBsrpWbpSources;
     private final Map<String, WbpSource> mapIdWbpSource;
     private static final Logger LOGGER = Logger.getLogger(WbpSourceDatabase.class.getSimpleName());
 
@@ -95,18 +96,13 @@ public class WbpSourceDatabase
 
     private WbpSourceDatabase()
     {
-        mmapSizeWbpSources = MultimapBuilder.hashKeys().arrayListValues().build();
+        mmapBsrpWbpSources = MultimapBuilder.hashKeys().arrayListValues().build();
         mmapSessionIdWbpSources = MultimapBuilder.hashKeys().arrayListValues().build();
-        mmapBassStyleWbpSources = new ListMultimap[SIZE_MAX - SIZE_MIN + 1];
-        for (int size = SIZE_MIN; size <= SIZE_MAX; size++)
-        {
-            mmapBassStyleWbpSources[size - SIZE_MIN] = MultimapBuilder.enumKeys(BassStyle.class).arrayListValues().build();
-        }
         mapIdWbpSource = new HashMap<>();
         mapSessionIdResource = new HashMap<>();
 
         // Extract the WbpSources from the WbpSessions
-        var wbpSessions = loadWbpSessionsFromMidiFile(MIDI_FILE_WALKING_RESOURCE_PATH, "", "walking", TimeSignature.FOUR_FOUR);
+        List<WbpSession> wbpSessions = loadWbpSessionsFromMidiFile(MIDI_FILE_WALKING_RESOURCE_PATH, "", "walking", TimeSignature.FOUR_FOUR);
         wbpSessions.forEach(s -> processWbpSession(s));
 
         wbpSessions = loadWbpSessionsFromMidiFile(MIDI_FILE_2FEEL_A_RESOURCE_PATH, "2FA", "2feel-a", TimeSignature.FOUR_FOUR);
@@ -118,21 +114,10 @@ public class WbpSourceDatabase
         // {x,number,#} avoids auto number formatting which turns 1200 into "1,200"
         LOGGER.log(Level.SEVERE, "WbpDatabase() 1-bar:{0,number,#}  2-bar:{1,number,#}  3-bar:{2,number,#}  4-bar:{3,number,#}", new Object[]
         {
-            mmapSizeWbpSources.get(1).size(), mmapSizeWbpSources.get(2).size(), mmapSizeWbpSources.get(3).size(), mmapSizeWbpSources.get(4).size()
+            getNbWbpSources(1), getNbWbpSources(2), getNbWbpSources(3), getNbWbpSources(4)
         });
     }
 
-    /**
-     * The number of WbpSources in the database.
-     *
-     * @param nbBars WbpSource size in bars. [1;4] or -1. If -1 return the number of all WbpSources whatever the size
-     * @return
-     */
-    public int getNbWbpSources(int nbBars)
-    {
-        Preconditions.checkArgument(nbBars == -1 || checkWbpSourceSize(nbBars), "nbBars=%s", nbBars);
-        return nbBars == -1 ? mapIdWbpSource.size() : mmapSizeWbpSources.get(nbBars).size();
-    }
 
     /**
      * Add a WbpSource to the database, unless an identical WbpSource is already there.
@@ -143,7 +128,8 @@ public class WbpSourceDatabase
     public boolean addWbpSource(WbpSource wbps)
     {
         boolean b = false;
-        if (mapIdWbpSource.get(wbps.getId()) == null && getWbpSources(wbps.getBassStyle(), wbps.getSimpleChordSequence(), wbps.getSizedPhrase()).isEmpty())
+        if (mapIdWbpSource.get(wbps.getId()) == null
+                && getFirstCompatibleWbpSource(wbps.getBassStyle(), wbps.getSimpleChordSequence(), wbps.getSizedPhrase(), true) == null)
         {
             addWbpSourceImpl(wbps);
             b = true;
@@ -316,43 +302,73 @@ public class WbpSourceDatabase
     }
 
     /**
-     * Get the WbpSources which are nbBars long.
-     * <p>
+     * The number of WbpSources in the database matching the specified parameters.
      *
-     * @param nbBars
-     * @return An unmodifiable list
+     * @param nbBars WbpSource size in bars. [1;4] or -1. If -1 all sizes are counted.
+     * @param styles If empty, all BassStyles are counted.
+     * @return
      */
-    public List<WbpSource> getWbpSources(int nbBars)
+    public int getNbWbpSources(int nbBars, BassStyle... styles)
     {
-        return Collections.unmodifiableList(mmapSizeWbpSources.get(nbBars));
+        Preconditions.checkArgument(nbBars == -1 || checkWbpSourceSize(nbBars), "nbBars=%s", nbBars);
+        List<BassStyle> bassStyles = List.of(styles);
+        int res;
+        if (nbBars == -1 && bassStyles.isEmpty())
+        {
+            res = mapIdWbpSource.size();
+        } else
+        {
+            res = (int) mapIdWbpSource.values().stream()
+                    .filter(wbps -> (nbBars == -1 || wbps.getSimpleChordSequence().getBarRange().size() == nbBars)
+                    && (bassStyles.isEmpty() || bassStyles.contains(wbps.getBassStyle())))
+                    .count();
+        }
+        return res;
+    }
+
+    /**
+     * Get the WbpSources matching the specified parameters.
+     * <p>
+     * Results are NOT cached, this can impact performance.
+     *
+     * @param nbBars WbpSource size in bars. [1;4] or -1. If -1 WbpSources of all sizes are returned.
+     * @param styles If empty, WbpSources of all BassStyles are returned.
+     * @return
+     */
+    public List<WbpSource> getWbpSources(int nbBars, BassStyle... styles)
+    {
+        Preconditions.checkArgument(nbBars == -1 || checkWbpSourceSize(nbBars), "nbBars=%s", nbBars);
+        List<BassStyle> bassStyles = List.of(styles);
+        List<WbpSource> res;
+        if (nbBars == -1 && bassStyles.isEmpty())
+        {
+            res = new ArrayList<>(mapIdWbpSource.values());
+        } else
+        {
+            res = mapIdWbpSource.values().stream()
+                    .filter(wbps -> (nbBars == -1 || wbps.getSimpleChordSequence().getBarRange().size() == nbBars)
+                    && (bassStyles.isEmpty() || bassStyles.contains(wbps.getBassStyle())))
+                    .toList();
+        }
+        return res;
     }
 
     /**
      * Get the WbpSources matching size and bass style.
+     * <p>
+     * Results are cached.
      *
-     * @param nbBars If -1 retrieve all WbpSources whatever the size
      * @param style
+     * @param rootProfile
      * @return Unmodifiable list
      */
-    public List<WbpSource> getWbpSources(int nbBars, BassStyle style)
+    public List<WbpSource> getWbpSources(BassStyle style, RootProfile rootProfile)
     {
         Objects.requireNonNull(style);
-        Preconditions.checkArgument(nbBars == -1 || checkWbpSourceSize(nbBars), "nbBars=%s style=%s", nbBars, style);
-        List<WbpSource> res;
-        if (nbBars == -1)
-        {
-            res = new ArrayList<>();
-            for (int size = SIZE_MAX; size >= SIZE_MIN; size--)
-            {
-                res.addAll(getBassStyleMultimap(size).get(style));
-            }
-        } else
-        {
-            res = getBassStyleMultimap(nbBars).get(style);
-        }
+        Objects.requireNonNull(rootProfile);
+        List<WbpSource> res = mmapBsrpWbpSources.get(new BsRp(style, rootProfile));
         return Collections.unmodifiableList(res);
     }
-
 
     /**
      * The original resource file from which a session was read.
@@ -443,8 +459,7 @@ public class WbpSourceDatabase
         var wbpSources = wbpSession.extractWbpSources(false, false);
         for (var wbpSource : wbpSources)
         {
-            wbpSource.simplifyChordSymbols();
-            if (getWbpSources(wbpSource.getBassStyle(), wbpSource.getSimpleChordSequence(), wbpSource.getSizedPhrase()).isEmpty())
+            if (getFirstCompatibleWbpSource(wbpSource.getBassStyle(), wbpSource.getSimpleChordSequence(), wbpSource.getSizedPhrase(), true) == null)
             {
                 // Add only non redundant phrases                
                 addWbpSourceImpl(wbpSource);
@@ -463,8 +478,6 @@ public class WbpSourceDatabase
      * - Markers "C7", "Ebm7", etc. <br>
      * - Midi notes must use only 1 channel<br>
      * <p>
-     * The target note of a session is by default the root of the 1st chord symbol of the section (the closest root of the last session note), unless it is
-     * specified via a "tn" session tag with this form: #tn=pitch, e.g. "#tn=36" for Midi note C1.
      *
      * @param midiFileResourcePath
      * @param sessionIdPrefix      A prefix added to each sessionId
@@ -501,6 +514,7 @@ public class WbpSourceDatabase
         }
         assert !markerEvents.isEmpty() : "midiFileResourcePath=" + midiFileResourcePath;
 
+
         // Sort markers: first session name "_xxx", then tags "#xxx", then chord symbols
         markerEvents.sort((left, right) -> 
         {
@@ -531,14 +545,17 @@ public class WbpSourceDatabase
             return c;
         });
 
+
         // Verify the presence of the end session marker
         var lastMarker = markerEvents.get(markerEvents.size() - 1);
         assert "_END".equalsIgnoreCase(MidiUtilities.getText(lastMarker)) : "MidiUtilities.getText(lastMarker)=" + MidiUtilities.getText(lastMarker);
+
 
         // Read the big phrase
         var phrases = Phrases.getPhrases(seqResolution, sequence.getTracks());
         assert phrases.size() == 1 : "nb phrases=" + phrases.size();
         var bigPhrase = phrases.get(0);
+
 
         // Loop on each session markers
         var sessionMarkers = markerEvents.stream().filter(me -> MidiUtilities.getText(me).startsWith("_")).toList();
@@ -552,12 +569,14 @@ public class WbpSourceDatabase
             long endPosInTicks = sessionMarkers.get(i + 1).getTick() - 1;
             LongRange sessionRange = new LongRange(startPosInTicks, endPosInTicks);
 
+
             // Extract all tag strings, convert to lowercase
             var sessionTags = new ArrayList<>(List.of(sessionTag.toLowerCase()));
             markerEvents.stream()
                     .filter(me -> me.getTick() == startPosInTicks && MidiUtilities.getText(me).startsWith("#"))
                     .map(me -> MidiUtilities.getText(me).substring(1).trim().toLowerCase())
                     .forEach(tag -> sessionTags.add(tag));
+
 
             // Is there a target note defined ?
             Note targetNote = null;
@@ -566,6 +585,7 @@ public class WbpSourceDatabase
             {
                 targetNote = new Note(Integer.parseInt(strPitch.substring(3)));
             }
+
 
             // The chord symbols
             var sessionChords = markerEvents.stream()
@@ -588,13 +608,15 @@ public class WbpSourceDatabase
                     })
                     .toList();
 
+
             // Get the size of the session
             FloatRange beatRange = new FloatRange(startPosInTicks / (float) MidiConst.PPQ_RESOLUTION, (endPosInTicks + 1) / (float) MidiConst.PPQ_RESOLUTION);
             int sizeInBars = (int) Math.round(beatRange.size() / ts.getNbNaturalBeats());
             int barFrom = (int) (beatRange.from / ts.getNbNaturalBeats());
             IntRange barRange = new IntRange(barFrom, barFrom + sizeInBars - 1);
 
-            // Get the notes
+
+            // Get the phrase
             Phrase p = Phrases.getSlice(bigPhrase, beatRange, false, 2, 0);
             if (p.isEmpty())
             {
@@ -606,16 +628,10 @@ public class WbpSourceDatabase
             SizedPhrase sp = new SizedPhrase(0, beatRange, ts, false);
             sp.add(p);
 
+
             // Get the SimpleChordSequence
             SimpleChordSequence cSeq = getChordSequence(sizeInBars, ts, sessionChords, startPosInTicks);
 
-            // Compute target note if not defined via a #tn tag
-            if (targetNote == null)
-            {
-                Note lastNote = sp.last();
-                ExtChordSymbol firstChord = cSeq.first().getData();
-                targetNote = new Note(lastNote.getClosestPitch(firstChord.getRootNote().getRelativePitch()));
-            }
 
             // Build the WbpSession
             WbpSession session = new WbpSession(sessionId, sessionTags, cSeq, sp, targetNote);
@@ -680,35 +696,37 @@ public class WbpSourceDatabase
     }
 
     /**
-     * Find the WbpSources in the database which are compatible with the specified parameters.
-     * <p>
+     * Find the first WbpSource compatible with the specified parameters.
      * <p>
      * Compatible means chord sequences share the same root profile and phrases have the same note intervals and approximately the same note positions.
      *
      * @param style
      * @param scs
      * @param sp
-     * @return Can be empty
-     * @see SizedPhrase#equalsAsIntervals(org.jjazz.phrase.api.Phrase, float)
+     * @param checkNotesDuration If true, to be compatible sp notes must also have (approximatively) the same duration
+     * @return Can be null
+     * @see SizedPhrase#equalsAsIntervals(org.jjazz.phrase.api.Phrase, boolean, float)
      */
-    private List<WbpSource> getWbpSources(BassStyle style, SimpleChordSequence scs, SizedPhrase sp)
+    private WbpSource getFirstCompatibleWbpSource(BassStyle style, SimpleChordSequence scs, SizedPhrase sp, boolean checkNotesDuration)
     {
-        List<WbpSource> res = new ArrayList<>();
+        WbpSource res = null;
         WbpsaScorer scorer = new WbpsaScorerDefault(null, -1, null, style);
 
-        int nbBars = scs.getBarRange().size();
-        var wbpSources = getWbpSources(nbBars, style).stream()
-                .filter(s -> scs.getRootProfile().equals(s.getRootProfile()))
-                .toList();
+        var rp = RootProfile.of(scs);
+        var wbpSources = getWbpSources(style, rp);
 
-        for (WbpSource rpWbpSource : wbpSources)
+        for (WbpSource wbpSource : wbpSources)
         {
-            var wbpsa = new WbpSourceAdaptation(rpWbpSource, scs);
-            var score = scorer.computeCompatibilityScore(wbpsa, null);
-            var spRp = rpWbpSource.getSizedPhrase();
-            if (score.compareTo(Score.ZERO) > 0 && sp.equalsAsIntervals(spRp, 0.15f))
+            if (!sp.equalsAsIntervals(wbpSource.getSizedPhrase(), checkNotesDuration, NON_QUANTIZED_WINDOW))
             {
-                res.add(rpWbpSource);
+                continue;
+            }
+            var wbpsa = new WbpSourceAdaptation(wbpSource, scs);
+            var score = scorer.computeCompatibilityScore(wbpsa, null);
+            if (score.compareTo(Score.ZERO) > 0)
+            {
+                res = wbpSource;
+                break;
             }
         }
         return res;
@@ -721,19 +739,15 @@ public class WbpSourceDatabase
         {
             throw new IllegalStateException("Duplicate WbpSource.id found: wbpSource=" + wbpSource + " old=" + old);
         }
-        int nbBars = wbpSource.getBarRange().size();
-        if (!mmapSizeWbpSources.put(nbBars, wbpSource))
-        {
-            throw new IllegalStateException("Adding to mmapSizeWbpSources failed for " + wbpSource + " mmapSizeWbpSources=" + mmapSizeWbpSources);
-        }
         if (!mmapSessionIdWbpSources.put(wbpSource.getSessionId(), wbpSource))
         {
             throw new IllegalStateException("Adding to mmapSessionIdWbpSources failed for " + wbpSource + " mmapSessionIdWbpSources=" + mmapSessionIdWbpSources);
         }
-        if (!getBassStyleMultimap(nbBars).put(wbpSource.getBassStyle(), wbpSource))
+
+        BsRp bsRp = new BsRp(wbpSource.getBassStyle(), wbpSource.getRootProfile());
+        if (!mmapBsrpWbpSources.put(bsRp, wbpSource))
         {
-            throw new IllegalStateException(
-                    "Adding to mmapBassStyleWbpSources failed for " + wbpSource + " getBassStyleMultimap(nbBars)=" + getBassStyleMultimap(nbBars));
+            throw new IllegalStateException("Adding to mmapBsrpWbpSources failed for " + wbpSource + " mmapBsrpWbpSources=" + mmapBsrpWbpSources);
         }
     }
 
@@ -744,264 +758,34 @@ public class WbpSourceDatabase
         {
             throw new IllegalStateException("Removing non-existing WbpSourceId=" + wbpSource.getId());
         }
-        int nbBars = wbpSource.getBarRange().size();
-        if (!mmapSizeWbpSources.remove(nbBars, wbpSource))
-        {
-            throw new IllegalStateException("Removing non-existing WbpSource=" + wbpSource + " mmapSizeWbpSources=" + mmapSizeWbpSources);
-        }
         if (!mmapSessionIdWbpSources.remove(wbpSource.getSessionId(), wbpSource))
         {
             throw new IllegalStateException("Removing non-existing WbpSource=" + wbpSource + " mmapSessionIdWbpSources=" + mmapSessionIdWbpSources);
         }
-        if (!getBassStyleMultimap(nbBars).remove(wbpSource.getBassStyle(), wbpSource))
+
+        BsRp bsRp = new BsRp(wbpSource.getBassStyle(), wbpSource.getRootProfile());
+        if (!mmapBsrpWbpSources.remove(bsRp, wbpSource))
         {
-            throw new IllegalStateException("Removing non-existing WbpSource=" + wbpSource + " getBassStyleMultimap(nbBars)=" + getBassStyleMultimap(nbBars));
+            throw new IllegalStateException("Removing non-existing WbpSource=" + wbpSource + " mmapBsrpWbpSources=" + mmapBsrpWbpSources);
         }
     }
 
-    private ListMultimap<BassStyle, WbpSource> getBassStyleMultimap(int nbBars)
-    {
-        return mmapBassStyleWbpSources[nbBars - SIZE_MIN];
-    }
 
-
-    // ==========================================================================================================
+    // =================================================================================================================================
     // Inner classes
-    // ==========================================================================================================    
+    // =================================================================================================================================
     /**
-     * A session is one consistent recording of a possibly long WalkingBassPhrase, which will be sliced in smaller WbpSource units.
-     * <p>
-     * It is recommended to use the shortest chord symbol corresponding to the phrase notes, typically 3-degrees or 4-degrees chord symbols (C, Cm, C+, Cdim,
-     * Cm6, C6, C7M, C7, Csus, C7sus, ...), though more complex chord symbols are allowed. If a chord symbol is too complex for the actual phrase notes (eg C7b9
-     * but phrase only uses C E G), chord symbol will be simplified in the WbpSource (C7b9 &gt; C).
-     * <p>
+     * Most of the database requests for WbpSources are based on a combination of these 2 parameters.
      */
-    static private class WbpSession extends Wbp
-    {
+    static private record BsRp(BassStyle bassStyle, RootProfile rootProfile)
+            {
 
-        private final String id;
-        private final List<String> tags;
-        private final BassStyle bassStyle;
-        private final Set<NoteEvent> loggedCrossingNotes;
-        private final boolean disableTargetNotes;
-        private static final Logger LOGGER = Logger.getLogger(WbpSession.class.getSimpleName());
-
-        public WbpSession(String id, List<String> tags, SimpleChordSequence cSeq, SizedPhrase phrase, Note targetNote)
+        public BsRp 
         {
-            super(cSeq, phrase, 0, targetNote);
-            this.id = id;
-            this.tags = tags;
-            this.disableTargetNotes = this.tags.contains("notn");
-            this.bassStyle = computeBassStyle(tags);
-            this.loggedCrossingNotes = new HashSet<>();
-
+            Objects.requireNonNull(bassStyle);
+            Objects.requireNonNull(rootProfile);
         }
 
-        public String getId()
-        {
-            return id;
-        }
-
-        /**
-         * The tags associated to this session.
-         *
-         * @return
-         */
-        public List<String> getTags()
-        {
-            return tags;
-        }
-
-        /**
-         * Extract all the possible WbpSources from this session.
-         * <p>
-         * We extract all the possible 1/2/3/4-bar WbpSources. So for one 4-bar session phrase, the method can generate 10 WbpSource objects: 1 * 4-bar + 2 *
-         * 3-bar + 3 * 2-bar + 4 * 1-bar.
-         * <p>
-         * Returned WbpSources get the tags of the session.
-         *
-         * @param disallowNonRootStartNote     If true a WbpSource is not extracted if its first note is different from the chord root note.
-         * @param disallowNonChordToneLastNote If true a WbpSource is not extracted if its last note is note a chord note (ie no transition note).
-         * @return
-         */
-        public List<WbpSource> extractWbpSources(boolean disallowNonRootStartNote, boolean disallowNonChordToneLastNote)
-        {
-            List<WbpSource> res = new ArrayList<>();
-
-            SizedPhrase sessionPhrase = getSizedPhrase();
-            int sessionSizeInBars = sessionPhrase.getSizeInBars();
-
-            for (int srcSize = 1; srcSize <= 4; srcSize++)
-            {
-                for (int bar = 0; bar < sessionSizeInBars - srcSize + 1; bar++)
-                {
-                    WbpSource wbpSource = extractWbpSource(bar, srcSize);
-                    if (wbpSource != null)
-                    {
-                        boolean bFirst = !disallowNonRootStartNote || wbpSource.isStartingOnChordRoot();
-                        boolean bLast = !disallowNonChordToneLastNote || wbpSource.isEndingOnChordTone();
-                        if (bFirst && bLast)
-                        {
-                            res.add(wbpSource);
-                        }
-                    }
-                }
-            }
-
-            return res;
-        }
-
-        @Override
-        public String toString()
-        {
-            return "WbpSession id=" + id + " tags=" + tags + " | " + super.toString();
-        }
-
-        // ==============================================================================================
-        // Private methods
-        // ==============================================================================================
-        /**
-         * Extract a WbpSource from a SizedPhrase.
-         *
-         * @param barOffset
-         * @param nbBars
-         * @return Can be null if no valid WbpSource could be extracted
-         */
-        private WbpSource extractWbpSource(int barOffset, int nbBars)
-        {
-            SizedPhrase sessionPhrase = getSizedPhrase();
-            TimeSignature ts = sessionPhrase.getTimeSignature();
-            IntRange barRange = new IntRange(barOffset, barOffset + nbBars - 1);
-
-            LOGGER.log(Level.FINE, "extractWbpSource() barRange={0} WbpSession={1}", new Object[]
-            {
-                barRange, this
-            });
-
-
-            // Compute phrase beat range
-            FloatRange beatRange = new FloatRange(barRange.from * ts.getNbNaturalBeats(), (barRange.to + 1) * ts.getNbNaturalBeats());
-
-
-            // Do not extract if there is a crossing note at start (but ignore crossing notes due to non quantized notes)
-            var crossingNotes = Phrases.getCrossingNotes(sessionPhrase, beatRange.from, true);
-            if (crossingNotes.stream()
-                    .anyMatch(ne
-                            -> ne.getPositionInBeats() < beatRange.from - FIRST_NOTE_BEAT_WINDOW && (ne.getPositionInBeats() + ne.getDurationInBeats()) > (beatRange.from + FIRST_NOTE_BEAT_WINDOW)))
-            {
-                if (!loggedCrossingNotes.contains(crossingNotes.get(0)))
-                {
-                    loggedCrossingNotes.addAll(crossingNotes);
-                    LOGGER.log(Level.WARNING, "extractWbpSource() start crossing note(s) detected={0} at bar {1}, WbpSession={2}",
-                            new Object[]
-                            {
-                                crossingNotes, barRange.from, getId()
-                            }
-                    );
-                    loggedCrossingNotes.addAll(crossingNotes);
-                    return null;
-                }
-            }
-
-
-            // Do not extract if there is a crossing note at end (but ignore crossing notes due to non quantized start notes from next bar)
-            crossingNotes = Phrases.getCrossingNotes(sessionPhrase, beatRange.to, true);
-            if (crossingNotes.stream()
-                    .anyMatch(ne
-                            -> ne.getPositionInBeats() < beatRange.to - FIRST_NOTE_BEAT_WINDOW
-                    && (ne.getPositionInBeats() + ne.getDurationInBeats()) > (beatRange.to + FIRST_NOTE_BEAT_WINDOW)))
-            {
-                if (!loggedCrossingNotes.contains(crossingNotes.get(0)))
-                {
-                    loggedCrossingNotes.addAll(crossingNotes);
-                    LOGGER.log(Level.FINE, "extractWbpSource() end crossing note(s) detected={0} at bar {1}, WbpSession={2}",
-                            new Object[]
-                            {
-                                crossingNotes, barRange.to, getId()
-                            }
-                    );
-                }
-                return null;
-            }
-
-
-            // For slice to work, remove FIRST_NOTE_BEAT_WINDOW from range.to in order to avoid possible (though rare) same-pitch notes overlaps when the generator
-            // will assemble WbpSources
-            FloatRange sliceBeatRange = beatRange.getTransformed(0, -FIRST_NOTE_BEAT_WINDOW);
-            Phrase p = Phrases.getSlice(sessionPhrase, sliceBeatRange, true, 1, FIRST_NOTE_BEAT_WINDOW);
-
-
-            // Above we handled crossing notes but because of non-quantization we ignored possible crossing notes which stops at the beginning of our bar. 
-            // The slice() might have produced remaining short notes, we need to remove them
-            p.removeIf(ne -> ne.getPositionInBeats() < (sliceBeatRange.from + FIRST_NOTE_BEAT_WINDOW) && ne.getDurationInBeats() <= FIRST_NOTE_BEAT_WINDOW);
-
-
-            // Adjust start positions
-            p.shiftAllEvents(-beatRange.from);
-            SizedPhrase sp = new SizedPhrase(sessionPhrase.getChannel(), beatRange.getTransformed(-beatRange.from), sessionPhrase.getTimeSignature(), false);
-
-            sp.addAll(p);
-
-
-            // Get possible firstNoteBeatShift
-            float firstNoteBeatShift = 0;       // By default
-            if (beatRange.from - FIRST_NOTE_BEAT_WINDOW >= 0)
-            {
-                p = Phrases.getSlice(sessionPhrase, new FloatRange(beatRange.from - FIRST_NOTE_BEAT_WINDOW, beatRange.from), false, 1, 0);
-                if (!p.isEmpty())
-                {
-                    var neLast = p.last();
-                    if (neLast.getBeatRange().to >= beatRange.from)
-                    {
-                        firstNoteBeatShift = -(beatRange.from - neLast.getPositionInBeats());
-                    }
-                }
-            }
-
-            // Get the progression starting at bar 0
-            var br = new IntRange(barOffset, barOffset + nbBars - 1);
-            var cSeq = getSimpleChordSequence().subSequence(br, true).getShifted(-barOffset);
-
-            // Target note
-            Note targetNote = getTargetNote();      // By default
-            int nextBar = barOffset + nbBars;
-            if (!disableTargetNotes && nextBar < sessionPhrase.getSizeInBars())
-            {
-                // If one bar after our phrase, find the next note
-                FloatRange fr = new FloatRange(nextBar * ts.getNbNaturalBeats(), (nextBar + 1) * ts.getNbNaturalBeats());
-                var nextBarNotes = sessionPhrase.getNotes(n -> true, fr, true);
-                assert !nextBarNotes.isEmpty();
-                targetNote = nextBarNotes.get(0);
-            }
-
-            var wbpSource = new WbpSource(getId(), barOffset, bassStyle, cSeq, sp, firstNoteBeatShift, targetNote);
-
-            tags.forEach(t -> wbpSource.addTag(t));
-
-            return wbpSource;
-        }
-
-
-        private BassStyle computeBassStyle(List<String> tags)
-        {
-            BassStyle res = BassStyle.WALKING;
-
-            boolean twoFeel = tags.stream().anyMatch(t -> t.startsWith("2feel"));
-            boolean walking = tags.stream().anyMatch(t -> t.equalsIgnoreCase("walking"));
-            if ((twoFeel && walking) || (!twoFeel && !walking))
-            {
-                LOGGER.log(Level.SEVERE, "computeBassStyle() Inconsistent tags found in WbpSession={0}", this);
-            } else if (twoFeel)
-            {
-                res = BassStyle.TWO_FEEL;
-            }
-            return res;
-        }
 
     }
-    // ==============================================================================================
-    // Inner classes
-    // ==============================================================================================
-
-
 }
